--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,24 +1,36 @@
 cmake_minimum_required(VERSION 3.14)
 set(CMAKE_CXX_STANDARD 14)
 
-project(order_book_src LANGUAGES CXX)
+project(order_book LANGUAGES CXX)
 
+include(FetchContent)
 
-set(HEADERS
-    "interfaces.h"
-    "order_book.h"
+FetchContent_Declare(
+  abseil
+  GIT_REPOSITORY https://github.com/abseil/abseil-cpp.git
+  GIT_TAG        20230125.0
 )
-set(SOURCES
-    "order_book.cpp"
-    "main.cpp"
+FetchContent_MakeAvailable(abseil)
+
+if(NOT abseil_POPULATED)
+	message(FAILED)
+endif()
+
+set(SOURCES	
+	"array/order_book.cpp"
+	"array/order_book.h"
+	"b_tree/order_book.h"
+	"b_tree/order_book.cpp"
+	"b_tree/order_book.h"
+	"common.h"
+	"main.cpp"
 )
 
-add_executable(order_book
-    ${HEADERS}
-    ${SOURCES}
-    )
+get_filename_component(PARENT_DIR ../ ABSOLUTE)
+include_directories(${PARENT_DIR}/src)
 
- add_library(order_book_lib STATIC 
-    ${HEADERS}
-    ${SOURCES}
- )
+add_executable(order_book ${SOURCES} )
+
+add_library(order_book_lib  STATIC ${SOURCES})
+target_link_libraries(order_book absl::container_common)
+target_link_libraries(order_book_lib absl::container_common)
